# Cargo.toml
[package]
name = "rust_visual_mouse_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at [https://doc.rust-lang.org/cargo/reference/manifest.html](https://doc.rust-lang.org/cargo/reference/manifest.html)

[dependencies]
ggez = "0.9.0-rc2" # Or the latest stable version if 0.9.0 is fully released
# Note: ggez 0.9.x uses glam for math.
# If you were using an older ggez (e.g., 0.8.x), it would use nalgebra.

