# Cargo.toml
[package]
name = "rust_visual_mouse_app"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.9.0-rc2" 
serde = { version = "1.0", features = ["derive"] } 
toml = "0.8" 
lyon_path = "1.0" # Or a version compatible with ggez 0.9.x, often 0.17.x
lyon_tessellation = "1.0" # Or a version compatible with ggez 0.9.x, often 0.17.x


